fix spacing for unit and enrollment on course card

--- a/apps/frontend/src/components/EnrollmentDisplay/EnrollmentDisplay.module.scss
+++ b/apps/frontend/src/components/EnrollmentDisplay/EnrollmentDisplay.module.scss
@@ -4,7 +4,6 @@
   line-height: 1;
   user-select: none;
   cursor: pointer;
-  align-self: flex-start;
 }
 
 .content {
